[project]
name = "architector"
version = "0.1.0"
description = ""
authors = [
    {name = "igor_fedulov",email = "ifedulov@bitinform.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.poetry]
packages = [{include = "architector", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
